# data_platform

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-airflow.yaml  docker-compose.yaml  format.ps1  pyproject.toml  requirements.txt
.dbt/: .bash_history  .user.yml  profiles.yml
.github/images/icons/: link.txt
.github/workflows/: ci.yaml
_knowledge/command_dictionary/: index.md
_misc/CV/: Greg Price - DA CV.docx
_research/architecture/: architecture.md  python_dev_standards.md
config/: airflow.cfg
dags/: dag_test.py  etl_dag.py  fpl_api_extract_and_dbt_transform.py  log_upload.py  my_first_dag.py
docker/: Dockerfile__ephemeral_etl  docker-compose-old.yaml  docker-compose.yaml  docker-compose_old.yaml
docker/_archive/: Airflow_Dockerfile  Ephemeral__ETL_Dockerfile
docker/container__postgres/: 02_tables.sql  03_views.sql  Dockerfile  New Text Document.txt  entrypoint_init.sql
docker/container__scripts/: .gitignore  Dockerfile  pyproject.toml
docker/ephemeral/: Dockerfile__dummy_data_generator  Dockerfile__ephemeral_etl  Dockerfile__ephemeral_etl__old
docker/linux_folder/: Dockerfile
docker/long_running/kafka/: docker-compose.yaml
docker/long_running/minio/: docker-compose.yaml
docker/long_running/postgres/: docker-compose.yaml
docker/postgres/: 03_views.sql  Dockerfile
docker/postgres_container_entrypoint/: initdb.sql
etl/: fpl_api_extract_and_load.py
ingestion/etl/: __main__.py
misc/CV/: Greg Price - AA 4.docx  Greg Price - AA CV.docx
misc/scratchpad/commit/architecture/: python_dev_standards.md
misc/scratchpad/commit/working_files/: pg.sql
misc/standalone_code/mssql/scripts/: first_date_automation.sql  master_data_management.sql
misc/standalone_code/process_runner_db/: .gitignore  config.json  pyproject.toml
misc/standalone_code/process_runner_db/python/process_runner_db/: main.py  sql_code.py  test.py
misc/standalone_code/process_runner_db/python/process_runner_db/Connectors/: mssql.py  process_runner.py
misc/standalone_code/process_runner_db/python/process_runner_db/Utils/: logging.py
mssql/scripts/: backorders.sql  first_date_automation__rules_function.sql  long_running_spids.sql  orderbook_management.sql  otif.sql  procurement_orderbook_management.sql  sales_order_coverage.sql
orchestration/: .gitignore
orchestration/config/: airflow.cfg  airflow_local_settings.py  prod.env
orchestration/dags/: datasets.py  test_imports.py  test_powershell.py  to_postgres_ingestion.py
python/etl/: pyproject.toml
python/etl/src/etl/env_vars_test/: main.py
python/etl/src/etl/from_faker/: helper_functions.py
python/etl/src/etl/from_faker/to_postgres/: dummy_data_generator.py
python/etl/src/etl/mssql_to_postgresql/: helper_functions.py
python/etl/src/etl/to_kafka/from_postgres_and_dummy_data/: main.py
python/etl__project/: pyproject.toml
python/shared/: pyproject.toml
python/shared/src/shared/config/: settings.py
python/shared/src/shared/config/to_postgres/: classes.py  config.py
python/shared/src/shared/connectors/: mssql.py  postgresql.py
python/src/: pyproject.toml
python/src/etl/mssql_to_postgresql/: helper_functions.py
python/src/shared/connectors/: mssql.py  postgresql.py
scratchpad/: .gitignore
scratchpad/commit/: docker-compose__ur_data_platform.yaml  docker_housekeeping_guide.md  helpful_commands.md  markdown_experimenting.md
scratchpad/commit/architecture/: simple spark architecture.txt
scratchpad/commit/command_dictionary/: index.md
scratchpad/commit/helpful_commands/: bash.md  docker.md
scripts/dbt/: .gitignore  .user.yml
scripts/dbt/fpl/: dbt_project.yml
scripts/etl/: fpl_api_extract_and_load.py
src/etl/: __main__.py
(+47 files in other folders)
