[tool.poetry]
name = "data_platform"
version = "0.1.0"
authors = ["priceg2898@github.com"]
readme = "README.md"
#packages = [{ include = "my_project" }]  # Replace with your package folder name

[tool.poetry.dependencies]
python = ">=3.12,<3.13" #"^3.12"  # Adjust to your Python version
certifi = "2026.1.4"
charset-normalizer = "3.4.4"
idna = "3.11"
psycopg2-binary = "2.9.11"
requests = "2.32.5"
urllib3 = "2.6.3"
dbt-postgres = "1.10.*"

[tool.dagster]
module_name = "data_platform"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==25.1.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
