[tool.poetry]
name = "etl-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "etl", from = "../src" },
    { include = "shared", from = "../src" }
]

[tool.poetry.dependencies]
python = "^3.12"

pandas = "*"
psycopg2-binary = "*"
sqlalchemy = "*"
pyodbc = "^5.3.0"
orjson = "^3.11.8"
duckdb = "^1.5.2"
faker = "^40.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
